--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,91 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Oswald:300,400,500,600&display=swap');
+
+:root {
+  overflow: hidden;
 }
 
+* {
+  outline: none;
+}
+
+.App {
+  text-align: center;
+  width: 100%;
+  font-family: Oswald, sans-serif;
+  height: 100%;
+  overflow: hidden;
+}
+
+.App > .container {
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+}
+
+.container > .texto {
+  display: flex;
+  color: #FFF;
+  width: 50%;
+  flex-direction: column;
+  margin: auto;
+  font-weight: 400;
+}
+
+.texto > h1, h2 {
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
+.texto > h1 {
+  font-size: 6.5em;
+  margin: 0;
+}
+
+.texto > h1 > span {
+  font-weight: 600;
+}
+
+.texto > h2 {
+  font-size: 1.8em;
+}
+
+.texto > div > button {
+  background-color: #FFF;
+  margin: 15px;
+  padding: 10px 35px;
+  border: none;
+  border-radius: 5px;
+  font-family: Oswald;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 1.5em;
+  transition: all .2s ease-in-out;
+  box-shadow: 0 8px 15px rgba(0,0,0,0.3);
+}
+
+.texto > div > button:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 12px rgba(0,0,0,0.3);
+}
+
+.texto > div > button:active {
+  transform: translateY(3px);
+  box-shadow: 0 5px 8px rgba(0,0,0,0.3);
+}
+
+.texto > div > button:not(:first-child) {
+  background-color: #750AC6;
+  color: #FFF;
+}
+
+.App > .container > canvas {
+  z-index: -1
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -34,5 +118,36 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 641px) {
+  .App > .container {
+    flex-direction: column;
+  }
+
+  .texto > h1, h2 {
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 2px;
+    text-align: center;
+  }
+
+  .texto > h1 {
+    font-size: 4em;
+    margin-left: -10%;
+    margin-top: 10% ;
+  }
+
+  .texto > div {
+    display: flex;
+    flex-direction: column;
+    width: 150%;
+    margin-left: -25%
+  }
+
+  .texto > div > button {
+    margin: 2% 0;
+    width: 100%;
   }
 }
